fixed media queries

--- a/css/style.css
+++ b/css/style.css
@@ -59,6 +59,9 @@ a:link {
 
 .social {
   z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 .social .fab {
@@ -84,7 +87,7 @@ canvas {
 
 @media only screen and (max-width: 640px) {
   .title h1 {
-    font-size: 3rem;
+    font-size: 2.2rem;
     -webkit-transition: font-size 0.25s ease;
     transition: font-size 0.25s ease;
   }
@@ -92,7 +95,7 @@ canvas {
 
 @media only screen and (max-width: 320px) {
   .title h1 {
-    font-size: 2.2rem;
+    font-size: 2rem;
     -webkit-transition: font-size 0.25s ease;
     transition: font-size 0.25s ease;
   }
