attempt to make page full cover #1

--- a/css/style.scss
+++ b/css/style.scss
@@ -59,6 +59,7 @@ a {
 
 canvas {
     display: block;
+    // float: left;
     // vertical-align: bottom;
   } /* ---- particles.js container ---- */
   #particles-js {
