--- a/css/style.scss
+++ b/css/style.scss
@@ -13,7 +13,8 @@ body {
 }
 
 main {
-    height: 100vh;
+    // height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,7 +60,6 @@ a {
 
 canvas {
     display: block;
-    // float: left;
     // vertical-align: bottom;
   } /* ---- particles.js container ---- */
   #particles-js {
