--- a/css/style.scss
+++ b/css/style.scss
@@ -13,8 +13,7 @@ body {
 }
 
 main {
-    // height: 100vh;
-    height: 100%;
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
