--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
   height: 100%;
   color: white;
   font-size: 16px;
+  height: 100vh;
+  /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 main {
