attempt to make page full cover #6

--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,6 @@ body {
     margin: 0;
     box-sizing: border-box;
     overflow: hidden;
-    // font-family: Helvetica, Arial, sans-serif;
     font-family: 'Roboto Slab', serif;
     height: 100%;
     color: white;
@@ -13,8 +12,7 @@ body {
 }
 
 main {
-    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
-    height: calc(var(--vh, 1vh) * 100);
+    min-height: 100vh; 
     display: flex;
     justify-content: center;
     align-items: center;
