--- a/css/style.css
+++ b/css/style.css
@@ -11,9 +11,7 @@ body {
 }
 
 main {
-  height: 100vh;
-  /* Fallback for browsers that do not support Custom Properties */
-  height: calc(var(--vh, 1vh) * 100);
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
