attempt to make page full cover #7

--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,7 @@ main {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  width: 70%;
-  margin: 0 auto;
+  padding: 0 15%;
 }
 
 a:active {
