--- a/css/style.scss
+++ b/css/style.scss
@@ -17,8 +17,9 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    width: 70%;
-    margin: 0 auto;
+    // width: 70%;
+    // margin: 0 auto;
+    padding: 0 15%;
 }
 
 a {
