attempt to make page full cover #8

--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,9 @@ canvas {
     -webkit-transition: font-size 0.25s ease;
     transition: font-size 0.25s ease;
   }
+  main {
+    min-height: 100vmax;
+  }
 }
 
 @media only screen and (max-width: 320px) {
@@ -97,6 +100,9 @@ canvas {
     font-size: 2rem;
     -webkit-transition: font-size 0.25s ease;
     transition: font-size 0.25s ease;
+  }
+  main {
+    min-height: 100vmax;
   }
 }
 /*# sourceMappingURL=style.css.map */
