attempt to make page full cover #9

--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,19 @@ main {
     // width: 70%;
     // margin: 0 auto;
     padding: 0 15%;
+    canvas {
+        display: inline;
+        vertical-align: bottom;
+      } /* ---- particles.js container ---- */
+      #particles-js {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        background-image: linear-gradient(#08CBA5, #35B0E6);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: 50% 50%;
+      } 
 }
 
 a {
@@ -56,19 +69,19 @@ a {
 
 //particles.js
 
-canvas {
-    display: block;
-    // vertical-align: bottom;
-  } /* ---- particles.js container ---- */
-  #particles-js {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background-image: linear-gradient(#08CBA5, #35B0E6);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: 50% 50%;
-  } 
+// canvas {
+//     display: inline;
+//     vertical-align: bottom;
+//   } /* ---- particles.js container ---- */
+//   #particles-js {
+//     position: absolute;
+//     width: 100%;
+//     height: 100%;
+//     background-image: linear-gradient(#08CBA5, #35B0E6);
+//     background-repeat: no-repeat;
+//     background-size: cover;
+//     background-position: 50% 50%;
+//   } 
   
 //media queries 
 
