--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,23 @@ main {
       -ms-flex-direction: column;
           flex-direction: column;
   padding: 0 15%;
+  /* ---- particles.js container ---- */
+}
+
+main canvas {
+  display: inline;
+  vertical-align: bottom;
+}
+
+main #particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#08CBA5), to(#35B0E6));
+  background-image: linear-gradient(#08CBA5, #35B0E6);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 50%;
 }
 
 a:active {
@@ -66,22 +83,6 @@ a:link {
 .social .fab {
   margin-top: 3rem;
   padding: 0 3rem;
-}
-
-canvas {
-  display: block;
-}
-
-/* ---- particles.js container ---- */
-#particles-js {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#08CBA5), to(#35B0E6));
-  background-image: linear-gradient(#08CBA5, #35B0E6);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: 50% 50%;
 }
 
 @media only screen and (max-width: 640px) {
