--- a/css/style.css
+++ b/css/style.css
@@ -36,12 +36,13 @@ main canvas {
 
 main #particles-js {
   position: absolute;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#08CBA5), to(#35B0E6));
   background-image: linear-gradient(#08CBA5, #35B0E6);
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: 50% 50%;
 }
 
