--- a/css/style.scss
+++ b/css/style.scss
@@ -26,11 +26,13 @@ main {
       } /* ---- particles.js container ---- */
       #particles-js {
         position: absolute;
+        left: 0;
+        top: 0;
         width: 100%;
-        height: 100%;
+        min-height: 100vh;
         background-image: linear-gradient(#08CBA5, #35B0E6);
         background-repeat: no-repeat;
-        background-size: cover;
+        // background-size: cover;
         background-position: 50% 50%;
       } 
 }
@@ -68,20 +70,6 @@ a {
 }
 
 //particles.js
-
-// canvas {
-//     display: inline;
-//     vertical-align: bottom;
-//   } /* ---- particles.js container ---- */
-//   #particles-js {
-//     position: absolute;
-//     width: 100%;
-//     height: 100%;
-//     background-image: linear-gradient(#08CBA5, #35B0E6);
-//     background-repeat: no-repeat;
-//     background-size: cover;
-//     background-position: 50% 50%;
-//   } 
   
 //media queries 
 
