--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,10 @@ main canvas {
   vertical-align: bottom;
 }
 
+main .particles-js-canvas-el {
+  height: 100vh !important;
+}
+
 main #particles-js {
   position: absolute;
   left: 0;
@@ -43,6 +47,7 @@ main #particles-js {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#08CBA5), to(#35B0E6));
   background-image: linear-gradient(#08CBA5, #35B0E6);
   background-repeat: no-repeat;
+  background-size: cover;
   background-position: 50% 50%;
 }
 
@@ -92,9 +97,6 @@ a:link {
     -webkit-transition: font-size 0.25s ease;
     transition: font-size 0.25s ease;
   }
-  main {
-    min-height: 100vmax;
-  }
 }
 
 @media only screen and (max-width: 320px) {
@@ -102,9 +104,6 @@ a:link {
     font-size: 2rem;
     -webkit-transition: font-size 0.25s ease;
     transition: font-size 0.25s ease;
-  }
-  main {
-    min-height: 100vmax;
   }
 }
 /*# sourceMappingURL=style.css.map */
